# AshaChatbot

./: .gitignore  ConversationalCrewreport.md  DockerFile  JobCrewReport.md  LearningCrewreport.md  README.md  ResumeCrewreport.md  dockerfile  keep_moving.py  r  requirements.txt
ashaai/: README.md  pyproject.toml
ashaai/src/ashaai/: crew.py  main.py
ashaai/src/ashaai/config/: agents.yaml  tasks.yaml
ashaai/src/ashaai/tools/: custom_tool.py  testing.py
ashaaiflow/: JobCrewReport.md  LearningCrewreport.md  README.md  ResumeCrewreport.mc  ResumeCrewreport.md  pyproject.toml
ashaaiflow/src/ashaaiflow/: main.py  testing.py
ashaaiflow/src/ashaaiflow/crews/community_crew/: community_crew.py
ashaaiflow/src/ashaaiflow/crews/conversational_crew/: conversational_crew.py
ashaaiflow/src/ashaaiflow/crews/job_crew/: job_crew.py
ashaaiflow/src/ashaaiflow/crews/learning_crew/: learning_crew.py
ashaaiflow/src/ashaaiflow/crews/resume_crew/: resume_crew.py  testing.py
ashaaiflow/src/ashaaiflow/knowledge/1/: context.txt
ashaaiflow/src/ashaaiflow/knowledge/2/: context.txt
ashaaiflow/src/ashaaiflow/knowledge/3/: context.txt
ashaaiflow/src/ashaaiflow/knowledge/knowledgeBase/: 6 Benefits Of Mentoring In The 2023 Workplace.txt  Caring roles block career advancement for three in five women | Gender pay gap | The Guardian.txt  Gender equality at work: research on the barriers to women’s progression - GOV.UK.txt  Why Everyone Wins With More Women In Leadership.txt  career_guidance_feedback_dataset.csv  (+3 more)
ashaaiflow/src/ashaaiflow/tools/: custom_tool.py  testing.py
(+63 files in other folders)
