[project]
name = "ashaai"
version = "0.1.0"
description = "AshaAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ashaai = "ashaai.main:run"
run_crew = "ashaai.main:run"
train = "ashaai.main:train"
replay = "ashaai.main:replay"
test = "ashaai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
