[project]
name = "ashaaiflow"
version = "0.1.0"
description = "ashaaiflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "docling>=2.30.0",
]

[project.scripts]
kickoff = "ashaaiflow.main:kickoff"
run_crew = "ashaaiflow.main:kickoff"
plot = "ashaaiflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
